--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,6 @@
+all:
+	go build server.go
+	go build client.go
 run:
 	go run main.go
 build:
@@ -5,4 +8,6 @@ build:
 windows:
 
 	CGO_CPPFLAGS="-Wno-error" CGO_ENABLED=1 CC=x86_64-w64-mingw32-gcc GOOS=windows GOARCH=amd64 go build main.go 
-#https://github.com/gen2brain/raylib-go/issues/184
+	#https://github.com/gen2brain/raylib-go/issues/184
+server:
+	go build server.go
